extracted footer as web component

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta content="utf-8" http-equiv="encoding" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module" src="./header.js"></script>
+    <script type="module" src="./footer.js"></script>
 
     <style type="text/css">
       html { 
@@ -30,9 +31,6 @@
       header {
         position: relative;
         margin-top: 6vh;
-      }
-      footer {
-        margin-top: 10vh;
       }
       article {
         position: relative;
@@ -78,6 +76,6 @@
       • CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
     </article>
 
-    <footer>≈˙∆˙≈</footer>
+    <my-footer></my-footer>
   </body>
 </html>
