removed my-footer custom component

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta content="utf-8" http-equiv="encoding" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module" src="./header.js"></script>
-    <script type="module" src="./footer.js"></script>
 
     <style type="text/css">
       html { 
@@ -45,6 +44,9 @@
         cursor: pointer;
         text-decoration: underline;
       }
+      footer {
+        margin-top: 10vh;
+      }
     </style>
   </head>
   <body onmouseover="">
@@ -76,6 +78,6 @@
       • CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
     </article>
 
-    <my-footer></my-footer>
+    <footer>≈˙∆˙≈</footer>
   </body>
 </html>
