removed custom web-component

--- a/index.html
+++ b/index.html
@@ -47,10 +47,38 @@
       footer {
         margin-top: 10vh;
       }
+      nav {
+        display: -webkit-box;
+        display: flex;
+        -webkit-box-pack: center;
+        justify-content: center;
+        height: 4vmin;
+      }
+      .card {
+        -webkit-box-flex: 1;
+        flex: 1 1 0;
+        -webkit-transition: all 500ms ease, background-color 3500ms ease;
+        transition: all 500ms ease, background-color 3500ms ease;
+      }
+      .card:hover {
+        -webkit-transform: scale(1.3);
+        transform: scale(1.3);
+      }
     </style>
   </head>
   <body onmouseover="">
-    <my-header></my-header>
+    <nav>
+      <div class='card'></div>
+      <div class='card'></div>
+      <div class='card'></div>
+      <div class='card'></div>
+      <div class='card'></div>
+      <div class='card'></div>
+      <div class='card'></div>
+      <div class='card'></div>
+      <div class='card'></div>
+      <div class='card'></div>
+    </nav>
 
     <header>
       <h3>Srdjan Strbanovic</br>
