--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       }
       footer {
         margin-top: 10vh;
+        line-height: 0.6rem;
       }
       nav {
         display: -webkit-box;
@@ -77,10 +78,10 @@
     </nav>
 
     <header>
-      <h3>Srdjan Strbanovic</br>
+      <h2>Srdjan Strbanovic</br>
           Software Engineer</br>
           NYC Tri-State Area
-      </h3>
+      </h2>
     </header>
 
     <article>
@@ -102,6 +103,6 @@
       • CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
     </article>
 
-    <footer>≈˙∆˙≈</footer>
+    <footer>˚∆˚<br/>––</footer>
   </body>
 </html>
