--- a/index.html
+++ b/index.html
@@ -36,10 +36,6 @@
         color: black;
         margin-top: 4.5vw;
       }
-      article a:hover {
-        cursor: pointer;
-        text-decoration: underline;
-      }
 
       a {
         display: inline-block;
@@ -55,13 +51,14 @@
         bottom: .07em;
         height: .1em;
         width: 100%;
-        background: linear-gradient(110deg, #e1f549, #29d0be, #6cb8ea, #ff5959);
+        background: linear-gradient(110deg, #dbddca, #b9d8d5, #b0c3cf, #dfaaaa);
         z-index: -1;
         transition: height .25s cubic-bezier(.6,0,.4,1);
       }
       a:hover::after {
         height: .2em;
       }
+      
       footer {
         margin-top: 10vh;
         line-height: 0.6rem;
