--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       footer {
         margin-top: 10vh;
         line-height: 0.6rem;
+        filter: drop-shadow(0.25rem 0 0.25rem #594848);
       }
       nav {
         display: -webkit-box;
