--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           color: rgb(224, 224, 183);
         }
         50% {
-          color: red;
+          color: rgb(119, 108, 108);
         }
       }
       footer {
