footer animation change

--- a/index.html
+++ b/index.html
@@ -61,17 +61,16 @@
       
       @keyframes pulse {
         0%, 100% {
-          color: rgb(224, 224, 183);
+          color: rgb(240, 201, 175);
         }
         50% {
-          color: rgb(119, 108, 108);
+          color: rgb(46, 42, 42);
         }
       }
       footer {
         margin-top: 10vh;
         line-height: 0.6rem;
-        animation: pulse 4s ease 6s alternate, 
-                   nudge 5s linear 9s alternate;
+        animation: pulse 4s ease 6s alternate;
       }
       nav {
         display: -webkit-box;
