animated footer size

--- a/index.html
+++ b/index.html
@@ -61,16 +61,20 @@
       
       @keyframes pulse {
         0%, 100% {
-          color: rgb(240, 201, 175);
+          color: black;
+          line-height: 0.6rem;
+
         }
-        50% {
-          color: rgb(46, 42, 42);
+        70% {
+          color: rgb(240, 236, 236);
+        line-height: 0.3rem;
+
         }
       }
       footer {
         margin-top: 10vh;
         line-height: 0.6rem;
-        animation: pulse 4s ease 6s alternate;
+        animation: pulse 2s ease 2s alternate;
       }
       nav {
         display: -webkit-box;
