more footer animation

--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
       
       @keyframes pulse {
         0%, 100% {
+          font-style: italic;
           color: black;
-          line-height: 0.6rem;
         }
         70% {
-          color: rgb(240, 236, 236);
-          line-height: 0.3rem;
+          font-style:unset;
+          color: rgb(244, 232, 232);
+          line-height: 0.7rem;
         }
       }
       footer {
