small footer changes

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </nav>
 
     <header>
-      <h2>Srdjan Strbanovic</br>
+      <h2>Sdjan Strbanovic</br>
           Software Engineer</br>
           NYC Tri-State Area
       </h2>
@@ -120,16 +120,16 @@
 
     <article>
       <h3>Work, now</h3>
-      • Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br/>
+       Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br/>
     </article>
 
     <article>
       <h3>Work, before</h3>
-      • Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br/>
-      • Principal Architect&emsp;<a href=https://www.thoughtworks.com/">@ThoughtWorks</a><br/>
-      • CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
+       Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br/>
+       Principal Architect&emsp;<a href=https://www.thoughtworks.com/">@ThoughtWorks</a><br/>
+       CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
     </article>
 
-    <footer>˚∆˚<br/>––</footer>
+    <footer>°◭°<br/>◡</footer>
   </body>
 </html>
