--- a/index.html
+++ b/index.html
@@ -130,6 +130,6 @@
        CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
     </article>
 
-    <footer>˚∆˚<br/>◡</footer>
+    <footer>΅<br/>˚∆˚<br/>◡</footer>
   </body>
 </html>
