--- a/index.html
+++ b/index.html
@@ -112,24 +112,24 @@
     </header>
 
     <article>
-      <h3>Portals</h3>
+      <h3>⋖ Portals ⋗</h3>
       <a href="http://github.com/srdjan">@github</a>&emsp;
       <a href="http://gotium.com">@blog</a>&emsp;
       <a href="https://twitter.com/djidja8">@twitter</a>
     </article>
 
     <article>
-      <h3>Work, now</h3>
+      <h3>⋖ Work, now ⋗</h3>
        Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br/>
     </article>
 
     <article>
-      <h3>Work, before</h3>
+      <h3>⋖ Work, before ⋗</h3>
        Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br/>
        Principal Architect&emsp;<a href=https://www.thoughtworks.com/">@ThoughtWorks</a><br/>
        CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
     </article>
 
-    <footer>΅<br/>˚∆˚<br/>◡</footer>
+    <footer>΅<br/>˚∆˚<br/>‿</footer>
   </body>
 </html>
