--- a/index.html
+++ b/index.html
@@ -1,61 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Personal Github page: Srdjan Strbanovic v1</title>
+    <title>Personal Github page: Srdjan Strbanovic</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module" src="./header.js"></script>
-
+    <link rel="stylesheet" href="https://newcss.net/new.min.css">
+    <link rel="stylesheet" href="https://newcss.net/theme/terminal.css">
     <style type="text/css">
-      html { 
-        margin: 0 auto;
-      }
-
-      body {
-        margin: 0;
-        padding: 0;
-        text-align: center;
-        place-items: center;
-        font-family: 'Lucida Console', Monaco, monospace;
-        font-size: 1.1rem;  
-      }   
-      @media only screen and (max-width: 480px) {
-	      body { font-size: 75%; }
-      }
-
-      header {
-        position: relative;
-        margin-top: 6vh;
-      }
-      article {
-        position: relative;
-        color: black;
-        margin-top: 4.5vw;
-      }
-
-      a {
-        display: inline-block;
-        position: relative;
-        text-decoration: none;
-        color: inherit;
-        z-index: 1;
-      }
-      a::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: .07em;
-        height: .05em;
-        width: 100%;
-        background: linear-gradient(270deg, #eaeae7, #d1d2d2, #7f8080, #121111);
-        z-index: -1;
-        transition: height .25s cubic-bezier(.6,0,.4,1);
-      }
-      a:hover::after {
-        height: .1em;
-      }
-      
       @keyframes pulse {
         0%, 100% {
           color: black;
@@ -100,13 +53,11 @@
       <div class='card'></div>
     </nav>
 
-    <header>
-      <h3>Sdjan Strbanovic</br>
-          Software Engineer</br>
-          NYC Tri-State Area
-      </h3>
-    </header>
-
+    <h3>Sdjan Strbanovic</br>
+        Software Engineer</br>
+        NYC Tri-State Area
+    </h3>
+    
     <article>
       <h3>⋖ Portals ⋗</h3>
       <a href="http://github.com/srdjan">@github</a>&emsp;
@@ -126,6 +77,6 @@
        CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
     </article>
 
-    <footer>΅<br/>˚∆˚<br/>‿</footer>
+    <footer>&emsp;΅<br/>˚∆˚<br/>&emsp;‿</footer>
   </body>
 </html>
