--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://newcss.net/new.min.css">
     <link rel="stylesheet" href="https://newcss.net/theme/terminal.css">
     <style type="text/css">
+      html {
+        font-size: clamp(12px, 2vw, 16px );
+      }
       @keyframes pulse {
         0%, 100% {
           color: black;
