--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
        CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
     </article>
 
-    <footer>&emsp;΅<br/>˚∆˚<br/>&emsp;‿</footer>
+    <footer>˚∆˚</footer>
   </body>
 </html>
