center text aligned

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://newcss.net/theme/terminal.css">
     <style type="text/css">
       html {
+        text-align: center;
         font-size: clamp(12px, 2vw, 16px );
       }
       @keyframes pulse {
@@ -78,6 +79,7 @@
        Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br/>
        Principal Architect&emsp;<a href=https://www.thoughtworks.com/">@ThoughtWorks</a><br/>
        CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
+       ◃ ◃ ◃
     </article>
 
     <footer>˚∆˚</footer>
