--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         animation: pulse 3s;
       }
       nav {
+        margin-bottom: 8vh;
         display: -webkit-box;
         display: flex;
         -webkit-box-pack: center;
@@ -56,26 +57,25 @@
       <div class='card'></div>
       <div class='card'></div>
     </nav>
-
     <h3>Sdjan Strbanovic</br>
         Software Engineer</br>
         NYC Tri-State Area
     </h3>
     
     <article>
-      <h3>⋖ Portals ⋗</h3>
+      <h4>⊣ Portals ⊢</h4>
       <a href="http://github.com/srdjan">@github</a>&emsp;
       <a href="http://gotium.com">@blog</a>&emsp;
       <a href="https://twitter.com/djidja8">@twitter</a>
     </article>
 
     <article>
-      <h3>⋖ Work, now ⋗</h3>
+      <h4>⊣ Work, now ⊢</h4>
        Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br/>
     </article>
 
     <article>
-      <h3>⋖ Work, before ⋗</h3>
+      <h4>⊣ Work, before ⊢</h4>
        Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br/>
        Principal Architect&emsp;<a href=https://www.thoughtworks.com/">@ThoughtWorks</a><br/>
        CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
