footer animation changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       }
       @keyframes pulse {
         0%, 100% {
-          color: black;
+          color: rgba(116, 100, 100, 0.89);
         }
         70% {
           font-style: italic;
@@ -26,7 +26,7 @@
       footer {
         margin-top: 10vh;
         line-height: 0.5rem;
-        animation: pulse 3s;
+        animation: pulse 3s 4s;
       }
       nav {
         margin-bottom: 8vh;
@@ -57,7 +57,9 @@
       <div class='card'></div>
       <div class='card'></div>
     </nav>
-    <h3>Sdjan Strbanovic</br>
+
+    <h3>
+        Sdjan Strbanovic</br>
         Software Engineer</br>
         NYC Tri-State Area
     </h3>
