footer color change

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       }
       @keyframes pulse {
         0%, 100% {
-          color: rgba(116, 100, 100, 0.89);
+          color: #375B27;
         }
         70% {
           font-style: italic;
-          color: rgb(210, 208, 208);
+          color: #72F94C;
           line-height: 0.8rem;
         }
       }
