removed border from h3

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           line-height: 0.8rem;
         }
       }
+      h3 {
+        border: unset;
+      }
       footer {
         margin-top: 10vh;
         line-height: 0.5rem;
