--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta content="utf-8" http-equiv="encoding" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module" src="./header.js"></script>
-    <link rel="stylesheet" href="https://newcss.net/new.min.css">
-    <link rel="stylesheet" href="https://newcss.net/theme/terminal.css">
+    <link href="https://dohliam.github.io/dropin-minimal-css/vendor/retro.min.css" rel="stylesheet" type="text/css">
     <style type="text/css">
       html {
-        text-align: center;
         font-size: clamp(12px, 2vw, 16px );
+        text-align: center;
+      }
+      body {
+        margin: 0 auto 0;
       }
       @keyframes pulse {
         0% {
@@ -64,8 +66,7 @@
       <div class='card'></div>
     </nav>
 
-    <h3>
-        Sdjan Strbanovic</br>
+    <h3>Sdjan Strbanovic</br>
         Software Engineer</br>
         NYC Tri-State Area
     </h3>
@@ -87,7 +88,7 @@
        Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br/>
        Principal Architect&emsp;<a href=https://www.thoughtworks.com/">@ThoughtWorks</a><br/>
        CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
-       ˌ ˌ ˌ
+      </br>and more ˌ ˌ ˌ
     </article>
 
     <footer>˚∆˚</footer>
