more footer futzing

--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
         }
         50% {
           font-style: italic;
+          font-size: 1.5rem;
           color: #72F94C;
-          line-height: 0.8rem;
+        }
+        75% {
+          font-weight: 800;
+          font-stretch: wider;
         }
         100% {
           color: white;
+          font-size: 1.5rem;
         }
       }
       h3 {
@@ -34,6 +39,7 @@
       footer {
         margin-top: 10vh;
         line-height: 0.5rem;
+        font-size: 1.2rem;
         animation: pulse 3s 4s;
       }
       nav {
