header font size h3->h4 footer animation fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           color: rgb(138, 133, 133);
         }
         50% {
-          font-style: italic;
+          font-style: oblique;
           font-size: 1.5rem;
           color: #72F94C;
         }
@@ -40,7 +40,7 @@
         margin-top: 10vh;
         line-height: 0.5rem;
         font-size: 1.2rem;
-        animation: pulse 3s 4s;
+        animation: pulse ease-in 4s 3s;
       }
       nav {
         margin-bottom: 8vh;
@@ -72,10 +72,10 @@
       <div class='card'></div>
     </nav>
 
-    <h3>Sdjan Strbanovic</br>
+    <h4>Sdjan Strbanovic</br>
         Software Engineer</br>
         NYC Tri-State Area
-    </h3>
+    </h4>
     
     <article>
       <h4>⊣ Portals ⊢</h4>
