added drop-shadow to the footer

--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
           font-style: oblique;
           font-size: 1.5rem;
           color: #72F94C;
+          filter: drop-shadow(0.1rem 0 0.3rem #d5e9d9);
         }
         75% {
           font-weight: 800;
           font-stretch: wider;
+        filter: drop-shadow(0.1rem 0 0.3rem #adc7b1);
+
         }
         100% {
           color: white;
           font-size: 1.5rem;
+          filter: drop-shadow(0.1rem 0 0.3rem #1abc35);
         }
       }
       h3 {
@@ -40,7 +44,7 @@
         margin-top: 10vh;
         line-height: 0.5rem;
         font-size: 1.2rem;
-        animation: pulse ease-in 4s 3s;
+        animation: pulse ease-in 4s 4s;
       }
       nav {
         margin-bottom: 8vh;
