fixed thoughtworks link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <article>
       <h4>⊣ Work, before ⊢</h4>
        Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br/>
-       Principal Architect&emsp;<a href=https://www.thoughtworks.com/">@ThoughtWorks</a><br/>
+       Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br/>
        CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
       </br>and more ˌ ˌ ˌ
     </article>
