embedded retor-css-min

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="utf-8" http-equiv="encoding" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module" src="./header.js"></script>
-    <link href="https://dohliam.github.io/dropin-minimal-css/vendor/retro.min.css" rel="stylesheet" type="text/css">
+    <link href="./style.css" rel="stylesheet" type="text/css">
     <style type="text/css">
       html {
         font-size: clamp(12px, 2vw, 16px );
