header bar starts gray, end green

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         100% {
           color: white;
           font-size: 1.5rem;
-          filter: drop-shadow(0.1rem 0 0.3rem #1abc35);
+          filter: drop-shadow(0.1rem 0 0.3rem #2ecc40);
         }
       }
       h3 {
@@ -57,8 +57,8 @@
       .card {
         -webkit-box-flex: 1;
         flex: 1 1 0;
-        -webkit-transition: all 500ms ease, background-color 3500ms ease;
-        transition: all 500ms ease, background-color 3500ms ease;
+        -webkit-transition: all 500ms ease-out, background-color 3500ms ease-out;
+        transition: all 500ms ease-out, background-color 3500ms ease-out;
       }
     </style>
   </head>
