changed footer animation, color

--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
         75% {
           font-weight: 800;
           font-stretch: wider;
-        filter: drop-shadow(0.1rem 0 0.3rem #adc7b1);
-
+          font-size: 1.75rem;
+          filter: drop-shadow(0.1rem 0 0.3rem #adc7b1);
         }
         100% {
-          color: white;
+          color: #72F94C;
+          font-kerning: unset;
           font-size: 1.5rem;
           filter: drop-shadow(0.1rem 0 0.3rem #2ecc40);
         }
@@ -43,8 +44,9 @@
       footer {
         margin-top: 10vh;
         line-height: 0.5rem;
-        font-size: 1.2rem;
-        animation: pulse ease-in 4s 4s;
+        font-size: 1.5rem;
+        color: #72F94C;
+        animation: pulse ease-in-out 2s 1s;
       }
       nav {
         margin-bottom: 8vh;
