--- a/index.html
+++ b/index.html
@@ -15,17 +15,10 @@
       body {
         margin: 0 auto 0;
       }
-      @keyframes pulse {
-        0% {
-          color: #222;
-        }
-        50% {
-          color: rgb(121, 134, 117);
-        }
-      }
       h3 {
         border: unset;
       }
+      @keyframes pulse { 0% { color: #222; } 50% { color: rgb(121, 134, 117); } }
       footer {
         margin-top: 10vh;
         line-height: 0.5rem;
