--- a/index.html
+++ b/index.html
@@ -1,86 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Personal Github page: Srdjan Strbanovic</title>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-    <meta content="utf-8" http-equiv="encoding" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="module" src="./header.js"></script>
-    <link href="./style.css" rel="stylesheet" type="text/css">
-    <style type="text/css">
-      html {
-        font-size: clamp(12px, 2vw, 16px );
-        text-align: center;
-      }
-      body {
-        margin: 0 auto 0;
-      }
-      h3 {
-        border: unset;
-      }
-      @keyframes pulse { 0% { color: #222; } 50% { color: rgb(121, 134, 117); } }
-      footer {
-        margin-top: 10vh;
-        line-height: 0.5rem;
-        font-size: 1.5rem;
-        color: #72F94C;
-        animation: pulse ease-in-out 5s 0.1s;
-      }
-      nav {
-        margin-bottom: 8vh;
-        display: -webkit-box;
-        display: flex;
-        -webkit-box-pack: center;
-        justify-content: center;
-        height: 4vmin;
-      }
-      .card {
-        -webkit-box-flex: 1;
-        flex: 1 1 0;
-        -webkit-transition: all 500ms ease-out, background-color 3500ms ease-out;
-        transition: all 500ms ease-out, background-color 3500ms ease-out;
-      }
-    </style>
-  </head>
-  <body onmouseover="">
-    <nav>
-      <div class='card'></div>
-      <div class='card'></div>
-      <div class='card'></div>
-      <div class='card'></div>
-      <div class='card'></div>
-      <div class='card'></div>
-      <div class='card'></div>
-      <div class='card'></div>
-      <div class='card'></div>
-      <div class='card'></div>
-    </nav>
 
-    <h4>Sdjan Strbanovic</br>
-        Software Engineer</br>
-        NYC Tri-State Area
-    </h4>
-    
-    <article>
-      <h4>⊣ Portals ⊢</h4>
-      <a href="http://github.com/srdjan">@github</a>&emsp;
-      <a href="http://gotium.com">@blog</a>&emsp;
-      <a href="https://twitter.com/djidja8">@twitter</a>
-    </article>
+<head>
+  <title>Personal Github page: Srdjan Strbanovic</title>
+  <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+  <meta content="utf-8" http-equiv="encoding" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script type="module" src="./header.js"></script>
+  <link href="./style.css" rel="stylesheet" type="text/css">
+  <style type="text/css">
+    html {
+      font-size: clamp(12px, 2vw, 16px);
+      text-align: center;
+      background-color: #444;
+      animation: bkgrnd ease-in-out 3s 0.1s;
+    }
 
-    <article>
-      <h4>⊣ Work, now ⊢</h4>
-       Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br/>
-    </article>
+    body {
+      margin: 0 auto 0;
+      background-color: #4444;
+    }
 
-    <article>
-      <h4>⊣ Work, before ⊢</h4>
-       Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br/>
-       Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br/>
-       CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
-      </br>and more ˌ ˌ ˌ
-    </article>
+    h3 {
+      border: unset;
+    }
 
-    <footer>˚∆˚</footer>
-  </body>
+    @keyframes bkgrnd {
+      0% {
+        background-color: #222;
+      }
+
+      50% {
+        background-color: #555;
+      }
+
+      100% {
+        background-color: #444;
+      }
+    }
+
+    @keyframes pulse {
+      0% {
+        color: #222;
+      }
+
+      50% {
+        color: rgb(121, 134, 117);
+      }
+    }
+
+    footer {
+      margin-top: 10vh;
+      line-height: 0.5rem;
+      font-size: 1.5rem;
+      color: #72F94C;
+      animation: pulse ease-in-out 5s 0.1s;
+    }
+
+    nav {
+      margin-bottom: 8vh;
+      display: -webkit-box;
+      display: flex;
+      -webkit-box-pack: center;
+      justify-content: center;
+      height: 4vmin;
+    }
+
+    .card {
+      -webkit-box-flex: 1;
+      flex: 1 1 0;
+      -webkit-transition: all 500ms ease-out, background-color 3500ms ease-out;
+      transition: all 500ms ease-out, background-color 3500ms ease-out;
+    }
+
+  </style>
+</head>
+
+<body onmouseover="">
+  <nav>
+    <div class='card'></div>
+    <div class='card'></div>
+    <div class='card'></div>
+    <div class='card'></div>
+    <div class='card'></div>
+    <div class='card'></div>
+    <div class='card'></div>
+    <div class='card'></div>
+    <div class='card'></div>
+    <div class='card'></div>
+  </nav>
+
+  <h4>Sdjan Strbanovic</br>
+    Software Engineer</br>
+    NYC Tri-State Area
+  </h4>
+
+  <article>
+    <h4>⊣ Portals ⊢</h4>
+    <a href="http://github.com/srdjan">@github</a>&emsp;
+    <a href="http://gotium.com">@blog</a>&emsp;
+    <a href="https://twitter.com/djidja8">@twitter</a>
+  </article>
+
+  <article>
+    <h4>⊣ Work, now ⊢</h4>
+    Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br />
+  </article>
+
+  <article>
+    <h4>⊣ Work, before ⊢</h4>
+    Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
+    Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
+    CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br />
+    </br>and more ˌ ˌ ˌ
+  </article>
+
+  <footer>˚∆˚</footer>
+</body>
+
 </html>
