--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     body {
       margin: 0 auto 0;
-      background-color: #4444;
+      background-color: #444;
+      animation: bkgrnd ease-in-out 3s;
     }
 
     h3 {
