more background animation changes

--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
     html {
       font-size: clamp(12px, 2vw, 16px);
       text-align: center;
-      background-color: #444;
-      animation: bkgrnd ease-in-out 3s;
     }
 
     body {
       margin: 0 auto 0;
-      background-color: #444;
+      height: 100vh;
+      background-color: rgb(41, 48, 39);
       animation: bkgrnd ease-in-out 3s;
     }
 
@@ -32,11 +31,11 @@
       }
 
       50% {
-        background-color: #333;
+        background-color: rgba(114, 114, 30, 0.2);
       }
 
       100% {
-        background-color: #444;
+        background-color: rgb(41, 48, 39);
       }
     }
 
