--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     body {
       margin: 0 auto 0;
       height: 100vh;
-      background: linear-gradient(-145deg, #54a7ca, #295163, #3c7691, #295163);
+      background: linear-gradient(-145deg, #14303b, #1c5670, #42819c, #327491);
       background-size: 400% 400%;
-      animation: gradient 7s ease;
+      animation: gradient 8s ease;
     }
 
     @keyframes gradient {
       0% {
-        background-position: 0% 50%;
+        background-position: 50% 0%;
       }
 
       50% {
-        background-position: 100% 50%;
+        background-position: 105% 20%;
       }
 
       100% {
-        background-position: 0% 50%;
+        background-position: -5% 20%;
       }
     }
 
