added footer animation

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
 <body onmouseover="">
   <nav>
-    <div class='card'></div>
-    <div class='card'></div>
-    <div class='card'></div>
-    <div class='card'></div>
-    <div class='card'></div>
-    <div class='card'></div>
-    <div class='card'></div>
-    <div class='card'></div>
-    <div class='card'></div>
-    <div class='card'></div>
+    <div class='head'></div>
+    <div class='head'></div>
+    <div class='head'></div>
+    <div class='head'></div>
+    <div class='head'></div>
+    <div class='head'></div>
+    <div class='head'></div>
+    <div class='head'></div>
+    <div class='head'></div>
+    <div class='head'></div>
   </nav>
 
   <h4>Sdjan Strbanovic</br>
@@ -49,7 +49,18 @@
     </br>and more ˌ ˌ ˌ
   </article>
 
-  <footer>˚∆˚</footer>
+  <footer>
+    <div class='foot'></div>
+    <div class='foot'></div>
+    <div class='foot'></div>
+    <div class='foot'></div>
+    <div class='foot'></div>
+    <div class='foot'></div>
+    <div class='foot'></div>
+    <div class='foot'></div>
+    <div class='foot'></div>
+    <div class='foot'></div>
+  </footer>
 </body>
 
 </html>
