new section style optimization

--- a/index.html
+++ b/index.html
@@ -24,29 +24,31 @@
     <div class='head'></div>
   </nav>
 
-  <h4>Sdjan Strbanovic</br>
+  <h3>Sdjan Strbanovic</br>
     Software Engineer</br>
     NYC Tri-State Area
-  </h4>
+  </h3>
+
+  <p>Open for contracts, code reviews, and coaching.</br>
+    Specializing in Distibuted Applications,</br>
+    Web and Cloud engineering.</br>
+    Feel free to <a href="mailto: srdjan@timok.com">drop me an email</a>.
+  </p>
 
   <article>
-    <h4>⊣ Portals ⊢</h4>
+    <h3>⊣ Portals ⊢</h3>
     <a href="http://github.com/srdjan">@github</a>&emsp;
     <a href="http://gotium.com">@blog</a>&emsp;
     <a href="https://twitter.com/djidja8">@twitter</a>
   </article>
 
   <article>
-    <h4>⊣ Work, now ⊢</h4>
-    Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br />
-  </article>
-
-  <article>
-    <h4>⊣ Work, before ⊢</h4>
+    <h3>⊣ Work, experience... ⊢</h3>
+    <p>Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br />
     Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
     Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
     CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br />
-    </br>and more ˌ ˌ ˌ
+    </br>ˌˌˌ</p>
   </article>
 
   <footer>
