--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     NYC Tri-State Area
   </h3>
 
-  <p>Open for contracts, code reviews, and coaching.</br>
-    Specializing in Distibuted Applications,</br>
-    Web and Cloud engineering.</br>
+  <p>Open for contracts, code reviews, and</br>
+    coaching. Specializing in distibuted</br>
+    applications, web and cloud engineering.</br>
     Feel free to <a href="mailto: srdjan@timok.com">drop me an email</a>.
   </p>
 
@@ -48,9 +48,11 @@
     Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
     Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
     CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br />
-    </br>ˌˌˌ</p>
+    </br>and more ˌˌˌ</p>
   </article>
-
+  
+  <p>˚∆˚</p>
+  
   <footer>
     <div class='foot'></div>
     <div class='foot'></div>
