setting the animation timing right

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="./style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body onmouseover="">
+<body>
   <nav>
     <div class='head'></div>
     <div class='head'></div>
