--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </h3>
 
   <p>Open for contracts, code reviews, and</br>
-    coaching. Specializing in distibuted</br>
+    coaching. Specializing in distributed</br>
     applications, web and cloud engineering.</br>
     Feel free to <a href="mailto: srdjan@timok.com">drop me an email</a>.
   </p>
