--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <article>
     <h3>⊣ Portals ⊢</h3>
     <a href="http://github.com/srdjan">@github</a>&emsp;
-    <a href="http://gotium.com">@blog</a>&emsp;
+    <a href="https://www.linkedin.com/in/srdjanstrbanovic/">@linkedin</a>&emsp;
     <a href="https://twitter.com/djidja8">@twitter</a>
   </article>
 
