--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     NYC Tri-State Area
   </h3>
 
-  <p>Open for contracts, code reviews, and</br>
-    coaching. Specializing in distributed</br>
-    applications, web and cloud engineering.</br>
-    Feel free to <a href="mailto: srdjan@timok.com">drop me an email</a>.
+  <p>Web and Cloud Engineering</br>
+     Architecture, code reviews and coaching</br></br>
+
+    Open for contracts, <a href="mailto: srdjan@timok.com">drop me an email</a>.
   </p>
 
   <article>
