--- a/index.html
+++ b/index.html
@@ -29,10 +29,15 @@
     NYC Tri-State Area
   </h3>
 
-  <p>Web and Cloud Engineering</br>
-     Architecture, code reviews and coaching</br></br>
+  <h4>Web and Cloud Architect & Builder</h4>
 
-    Open for contracts, <a href="mailto: srdjan@timok.com">drop me an email</a>.
+  <p>⊣ Design guidance and insights into</br>
+    distributed system architecture</br>
+    ⊣ Help in selecting the right and cost effective<br>
+    technology & vendors for your applications.</br>
+    ⊣ Team & development process building</br>
+    ⊣ Security and code quality reviews</br></br>
+    Open for contracts, <a href="mailto: srdjan@timok.com">drop me an email</a>
   </p>
 
   <article>
