more copy changes

--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
 
   <h4>Web and Cloud Architect & Builder</h4>
 
-  <p>⊣ Design guidance and insights into</br>
-    distributed system architecture</br>
-    ⊣ Help in selecting the right and cost effective<br>
-    technology & vendors for your applications.</br>
-    ⊣ Team & development process building</br>
-    ⊣ Security and code quality reviews</br></br>
+  <p>⊲ Distributed system architecture ⊳</br>
+    ⊲ Choosing the right and cost effective technology ⊳</br>
+    ⊲ Team & development process building ⊳</br>
+    ⊲ Security and code quality reviews ⊳</br></br>
     Open for contracts, <a href="mailto: srdjan@timok.com">drop me an email</a>
   </p>
 
