small pixel dusting changes

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     NYC Tri-State Area
   </h3>
 
-  <h4>Web and Cloud Architect & Builder</h4>
+  <h4>˙Web and Cloud Architect & Builder˙</h4>
 
-  <p>⊲ Distributed system architecture ⊳</br>
-    ⊲ Choosing the right and cost effective technology ⊳</br>
-    ⊲ Team & development process building ⊳</br>
-    ⊲ Security and code quality reviews ⊳</br></br>
+  <p>Distributed system architecture</br>
+    Choosing the right and cost effective technology</br>
+    Team & development process building</br>
+    Security and code quality reviews</br></br>
     Open for contracts, <a href="mailto: srdjan@timok.com">drop me an email</a>
   </p>
 
