--- a/index.html
+++ b/index.html
@@ -25,18 +25,11 @@
   </nav>
 
   <h3>Sdjan Strbanovic</br>
-    Software Engineer</br>
+    Software Engineer, Builder</br>
     NYC Tri-State Area
   </h3>
 
-  <h4>˙Web and Cloud Architect & Builder˙</h4>
-
-  <p>Distributed system architecture</br>
-    Choosing the right and cost effective technology</br>
-    Team & development process building</br>
-    Security and code quality reviews</br></br>
-    Open for contracts, <a href="mailto: srdjan@timok.com">drop me an email</a>
-  </p>
+  <h4>Web Applications | Distributed Systems | Cloud Native</h4>
 
   <article>
     <h3>⊣ Portals ⊢</h3>
